--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,43 +2,39 @@ name: Python CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run Tests
-        run: pytest
+    - name: Lint with flake8 (warnings only)
+      run: |
+        # This run will print serious issues
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # This run will catch everything but not fail the build
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Lint Code
-        run: |
-          pip install flake8
-          flake8 .
-
-      - name: Build Docker image
-        run: docker build -t myusername/my-app:${{ github.sha }} .
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push Docker image
-        run: docker push myusername/my-app:${{ github.sha }}
+    - name: Run tests with pytest
+      run: |
+        pytest tests/
