--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        PYTHONPATH=. pytest tests/
+        pytest tests/test_app.py --maxfail=1 --disable-warnings -q
